--- a/src/components/start/file.html
+++ b/src/components/start/file.html
@@ -4,8 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<style></style>
 	</head>
 	<body>
 		<h1>Heloooooooo!!!!!</h1>
+		<button id="button">hello</button>
+		<script>
+			document.querySelector("#button").addEventListener("click", () => {
+				document.querySelector("#button").textContent = "Goodbye!!";
+			});
+		</script>
 	</body>
 </html>
