--- a/src/components/start/file.html
+++ b/src/components/start/file.html
@@ -4,12 +4,26 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<style></style>
+		<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+		<style>
+			.ql-toolbar.ql-snow, .ql-container.ql-snow {
+				border: none;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Heloooooooo!!!!!</h1>
 		<button id="button">hello</button>
+		<div id="editor">
+			<p>Hello World!</p>
+			<p>Some initial <strong>bold</strong> text</p>
+			<p><br></p>
+		  </div>
+		<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 		<script>
+			 var quill = new Quill('#editor', {
+				theme: 'snow'
+			});
 			document.querySelector("#button").addEventListener("click", () => {
 				document.querySelector("#button").textContent = "Goodbye!!";
 			});
