--- a/src/components/subfolder/subfolder.css
+++ b/src/components/subfolder/subfolder.css
@@ -84,3 +84,27 @@ ul ul ul li {
 .hidden {
 	display: none;
 }
+
+.codicon {
+	color: #7379b8;
+}
+
+.back-button {
+	padding: 10px;
+	border-radius: 8px;
+	height: 20px;
+	width: 18px;
+	background-color: #262626;
+	border: 2px solid transparent;
+}
+
+.back-button:hover {
+	border: 2px solid #2f2f2f;
+	cursor: pointer;
+}
+
+.folder-title-container {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
