--- a/src/style/general.css
+++ b/src/style/general.css
@@ -16,6 +16,11 @@ h1 {
 h2 {
 	font-size: 16px;
 }
+
+.breadcrumb {
+	font-size: 12px;
+	color: #b0b0b0;
+}
 /* -----search bar------- */
 
 .search-container {
