--- a/src/style/general.css
+++ b/src/style/general.css
@@ -1,11 +1,24 @@
+:root {
+	--primary-accent-color: #7379b8;
+	--body-background-color: #1e1e1e;
+	--text-color: #fff;
+	--secondary-text-color: #b0b0b0;
+	--border-color: #2f2f2f;
+	--split-border-color: #3f3f3f; /*used in multidropdown between folders*/
+	--modal-background-color: #373737;
+	--item-background-color: #262626;
+	--hover-background-color: #444444;
+	--delete-text-color: #da7474;
+}
+
 * {
-	color: #fff;
+	color: var(--text-color);
 	font-family: sans-serif;
 }
 
 body {
 	padding: 2em;
-	background-color: #1e1e1e;
+	background-color: var(--body-background-color);
 }
 /* -----text------- */
 
@@ -19,8 +32,8 @@ h2 {
 /* -----search bar------- */
 
 .search-container {
-	background-color: #262626;
-	border: 2px solid #2f2f2f;
+	background-color: var(--item-background-color);
+	border: 2px solid var(--border-color);
 	position: relative;
 	padding: 7px 10px;
 	display: flex;
@@ -39,7 +52,7 @@ h2 {
 }
 
 .codicon {
-	color: #7379b8;
+	color: var(--primary-accent-color);
 }
 
 /* ------multi dropdown--------- */
@@ -65,23 +78,23 @@ ul {
 
 ul li {
 	display: block;
-	background-color: #373737;
+	background-color: var(--modal-background-color);
 	padding: 3px;
-	border-bottom: 1px solid #2f2f2f;
-	border-right: 1px solid #444444;
-	border-left: 1px solid #444444;
+	border-bottom: 1px solid var(--split-border-color);
+	border-right: 1px solid var(--hover-background-color);
+	border-left: 1px solid var(--hover-background-color);
 	cursor: pointer;
 }
 
 ul li:first-child {
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
-	border-top: 1px solid #444444;
+	border-top: 1px solid var(--hover-background-color);
 }
 ul li:last-child {
 	border-bottom-left-radius: 8px;
 	border-bottom-right-radius: 8px;
-	border-bottom: 1px solid #444444;
+	border-bottom: 1px solid var(--hover-background-color);
 }
 
 a {
@@ -89,14 +102,13 @@ a {
 	align-items: center;
 	justify-content: space-between;
 	line-height: 5px;
-	color: #efefef;
+	color: var(--text-color);
 	text-decoration: none;
 	padding: 0 10px;
 }
 
 a:hover {
-	color: #fff;
-	background-color: #444444;
+	background-color: var(--hover-background-color);
 	border-radius: 8px;
 }
 
@@ -149,7 +161,7 @@ ul ul ul li {
 }
 
 #delete-modal {
-	background-color: #373737;
+	background-color: var(--modal-background-color);
 	border-radius: 8px;
 	padding: 20px 25px;
 	z-index: 110;
@@ -168,7 +180,7 @@ ul ul ul li {
 	align-items: center;
 	justify-content: center;
 	gap: 10px;
-	background-color: #da7474;
+	background-color: var(--delete-text-color);
 }
 
 #delete-button-perm .codicon {
@@ -176,6 +188,7 @@ ul ul ul li {
 }
 
 #delete-button-perm p {
+	color: #fff;
 	margin: 0;
 }
 
@@ -193,12 +206,12 @@ ul ul ul li {
 	border-radius: 8px;
 	height: 21px;
 	width: 21px;
-	background-color: #262626;
+	background-color: var(--item-background-color);
 	border: 2px solid transparent;
 }
 
 .back-button:hover {
-	border: 2px solid #2f2f2f;
+	border: 2px solid var(--border-color);
 	cursor: pointer;
 }
 
@@ -210,7 +223,7 @@ ul ul ul li {
 
 button {
 	border-radius: 8px;
-	color: #fff;
+	color: var(--text-color);
 	text-align: center;
 	border: none;
 	width: 110px;
@@ -221,7 +234,7 @@ button {
 
 .secondary-button {
 	background-color: transparent;
-	border: 1px solid #8d95e6;
+	border: 1px solid var(--primary-accent-color);
 }
 
 /* --------- EFFECTS ----------- */
@@ -243,7 +256,7 @@ button {
 
 .breadcrumb {
 	font-size: 12px;
-	color: #b0b0b0;
+	color: var(--secondary-text-color);
 }
 
 .breadcrumb:hover {
