--- a/src/style/general.css
+++ b/src/style/general.css
@@ -61,6 +61,11 @@ h2 {
 	position: relative;
 	cursor: pointer;
 }
+
+span.codicon.codicon-kebab-vertical {
+	font-size: 2rem;
+}
+
 .dropdown {
 	position: absolute;
 	right: 35px;
@@ -247,6 +252,10 @@ button {
 .foldername-container {
 	display: flex;
 	align-items: center;
+}
+
+span.codicon.codicon-folder {
+	font-size: 1.2rem;
 }
 
 /* --------- BREADCRUMB ----------- */
