--- a/src/style/general.css
+++ b/src/style/general.css
@@ -24,10 +24,12 @@ body {
 
 h1 {
 	font-size: 20px;
+	color: var(--text-color);
 }
 
 h2 {
 	font-size: 16px;
+	color: var(--text-color);
 }
 /* -----search bar------- */
 
@@ -338,4 +340,91 @@ span.codicon.codicon-folder {
 
 #toolbar-container {
     margin: 0 auto;
+}
+
+
+/* ----------- Overview ------------ */
+#search {
+	width: 100%;
+	padding: 12px 10px;
+	background-color: var(--item-background-color);
+	border: 2px solid var(--border-color);
+	border-radius: 8px;
+	font-size: medium;
+}
+
+.container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	row-gap: 10px;
+	align-items: center;
+}
+
+.item,
+.item-file {
+	width: 100%;
+	padding: 5px;
+	display: grid;
+	grid-template-columns: 1fr 35px;
+	justify-content: space-between;
+	align-items: center;
+	background-color: var(--item-background-color);
+	border: 2px solid var(--border-color);
+	border-radius: 8px;
+}
+
+.plain {
+	width: 100%;
+	padding: 0;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.left {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	row-gap: 10px;
+	justify-content: space-between;
+}
+
+.left:hover {
+	cursor: pointer;
+}
+
+.folder-name,
+.file-name {
+	padding-left: 10px;
+}
+
+.right {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.mtime {
+	padding-right: 10px;
+	font-size: smaller;
+	color: var(--secondary-text-color);
+}
+
+#buttons-container {
+    width: 100%;
+    position: sticky;
+    bottom: 0px;
+    background-color: var(--body-background-color);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#buttons-container svg {
+    cursor: pointer;
 }
