--- a/src/style/general.css
+++ b/src/style/general.css
@@ -13,12 +13,12 @@
 
 * {
 	color: var(--text-color);
-	font-family: sans-serif;
 }
 
 body {
 	padding: 2em;
 	background-color: var(--body-background-color);
+	font-family: sans-serif;
 }
 /* -----text------- */
 
@@ -356,6 +356,12 @@ span.codicon.codicon-folder {
 	border: 1px solid #ccc; /* Add border for visibility */
 	padding: 10px;
 	margin-bottom: 10px;
+}
+
+#editor.ql-snow div.ql-editor pre.ql-syntax {
+	background-color: var(--item-background-color);
+	color: var(--text-color);
+	font-family: 'Monaco';
 }
 
 #toolbar-wrapper {
