Changes before deploying

--- a/src/style/general.css
+++ b/src/style/general.css
@@ -389,7 +389,7 @@ span.separator {
 #editor.ql-snow div.ql-editor pre.ql-syntax {
 	background-color: var(--item-background-color);
 	color: var(--text-color);
-	font-family: 'Monaco';
+	font-family: 'Monaco', monospace;
 }
 
 #toolbar-wrapper {
